Bug 127814 - FILEOPEN DOCX Table rows get extra spacing after page break
Summary: FILEOPEN DOCX Table rows get extra spacing after page break
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2019-09-27 08:15 UTC by NISZ LibreOffice Team
Modified: 2019-10-16 10:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (29.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-09-27 08:16 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer. (129.79 KB, image/png)
2019-09-27 08:16 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document in LO 4.2 and 4.3 (112.73 KB, image/png)
2019-09-27 08:16 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-09-27 08:15:25 UTC
Description:
Attached user made document contains a table after a page break. In Word the table rows have no spacing before, but in Writer they get a 0.49 cm before spacing.
This does not happen if I delete the page break or the paragraph before the page break in Word.

Steps to Reproduce:
Open attached file

Actual Results:
Table row paragraphs have extra 0.49cm spacing before.

Expected Results:
Table row paragraphs should have no extra spacing before.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 3e64065612acec2eb29aa21e2b515953422256d7
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-15_22:57:26
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Already happens in:
Verzió: 4.3.0.4
Build az.: 62ad5818884a2fc2e5780dd45466868d41009ec0

But not in:
Verzió: 4.2.0.4
Build az.: 05dceb5d363845f2cf968344d7adab8dcfb2ba71

Bibisected using bibisect-win32-4.3 to the range: 
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=b09df1857c08ea2de772cd0547ad8a5d0771f7d0..b55f60c0a8a4284cd981979457569e940379b478
Comment 1 NISZ LibreOffice Team 2019-09-27 08:16:04 UTC
Created attachment 154581 [details]
Example file from Word
Comment 2 NISZ LibreOffice Team 2019-09-27 08:16:24 UTC
Created attachment 154582 [details]
Screenshot of the original document side by side in Word and Writer.
Comment 3 NISZ LibreOffice Team 2019-09-27 08:16:48 UTC
Created attachment 154583 [details]
Screenshot of the original document in LO 4.2 and 4.3
Comment 4 Xisco Faulí 2019-09-27 12:29:11 UTC
The issue is not 'bisected' as the commit introducing this regression hasn't been identified
Comment 5 Xisco Faulí 2019-09-27 12:34:13 UTC
Regression introduced by:

author	PriyankaGaikwad <priyanka.gaikwad@synerzip.com>	2014-04-09 14:50:39 +0530
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-04-15 08:55:29 +0000
commit 1f274be55e8c7028bf003786e9b2784909760d07 (patch)
tree f8e6726c096c7437b77df1502cfeed579d4beb45
parent 762660eec225d69f5284f22f6ff5f4b4108fe288 (diff)
Line spacing is not preserved for styles.

Bisected with: bibisect-43max
Comment 6 Commit Notification 2019-10-10 08:45:21 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/88ddeed17d5a7caca407f892a094a3dcb0aff501

tdf#127814 DOCX: fix default paragraph margin in table cells

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-10-15 13:48:15 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/be9f9630a7a394521e56cc1247ce2463e15fa796

tdf#127814 DOCX: fix default paragraph margin in table cells

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2019-10-16 10:33:21 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: e2d82611088677f8ec9f038639567f2d7c699b5e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!