tdf#127814 DOCX: fix default paragraph margin in table cells

when the table is started on a new page. Undefined
w:before in w:docDefaults/w:pPrDefault resulted 0.5 cm
paragraph top margin instead of 0 cm.

Change-Id: I94a2aa9e9c5fcee6443b74bb261c300c6a8e1303